--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.context-path=/medical
 #Database Connection Properties
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/medicalproject?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=Sairam@83
 # schema will be automatically updated for every start of application
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
